[package]
name = "rgenpass0"
version = "0.1.0"
authors = ["Irisawa Masaru <irisawa.masaru@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "*"
rand = "*"
sysinfo = "*"
# shared_memory-rs = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
